Integration der patchens r1877 - 1902: Beitrag von Terry: - Neues Import Format fuer terms: SKOS - Keyphrase extraction utility, nutzbar um Kategorien vorschlagen zu lassen,   die zu einem content item passen.
Update Script: 
ccm upgrade ccm-ldn-terms --from-version 6.5.0 --to-version 6.5.1

Es sind Änderungen am theme erforderlich, um die Funktionen nutzen zu können:
siehe:
ccm-ldn-aplaws/src/com/arsdigita/aplaws/ui/TermWidget.java
ccm-ldn-aplaws/web/__ccm__/themes/aplaws/types/ContentTypes.xsl
ccm-cms/web/__ccm__/static/cms/admin/category-step/category-step.xsl
ccm-ldn-navigation/src/com/arsdigita/london/navigation/cms/CategoryDataCollectionDefinition.java

Damit ist trunk hb auf Stand r1902 aplaws trunk
(1871 bis 1876 waren eigene patches, die bereits enthalten sind, ebenso 1894)
Patch 1879 uebersprungen, fuegt dictionary fuer eclipse in das root Verzeichnis 
von trunk ein. Da gehoert aber nichts hin, ausserdem Eclipse im Moment nicht
in Benutzung hier.


git-svn-id: https://svn.libreccm.org/ccm/trunk@235 8810af33-2d31-482b-a856-94f89814c4df